--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
+    <meta name="naive-ui-style" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
