--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta name="naive-ui-style" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>undefined</title>
   </head>
   <body>
     <div id="app"></div>
